test/parser/lambda/lambda_missing_block.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:8: error: expected '{'
  ->(x);
}
